# e2eemsgs

./: .dockerignore  .gitignore  ATTACK.md  Cargo.toml  Dockerfile  README.md  attack.py  docker-compose.prod.yaml  docker-compose.yaml  flake.nix
backend/: config.py  main.py  models.py  notifications.py  openapi.json  requirements.txt
backend/agepy/: Cargo.toml  agepy.pyi  pyproject.toml
backend/agepy/src/: lib.rs
backend/api/: __init__.py  authentication.py  groups.py  messages.py  messaging.py  session.py  users.py  websocket.py
frontend/: README.md  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/argon2wasm/: Cargo.toml
frontend/argon2wasm/pkg/: argon2wasm.d.ts  argon2wasm.js  argon2wasm_bg.wasm  argon2wasm_bg.wasm.d.ts  package.json
frontend/argon2wasm/src/: asym.rs  lib.rs  sym.rs
frontend/src/: App.tsx  hooks.tsx  main.tsx  types.ts
frontend/src/api-client/: sdk.gen.ts  types.gen.ts
frontend/src/components/: AddUserDialog.tsx  ChatMenuDialog.tsx  ChatTopBar.stories.tsx  ChatTopBar.tsx  CreateGroupDialog.stories.tsx  CreateGroupDialog.tsx  EditProfileDialog.tsx  GroupMembersMenu.tsx  GroupSideBar.stories.tsx  GroupSideBar.tsx  InfoBox.stories.tsx  InfoBox.tsx  Message.stories.tsx  Message.tsx  MessageInput.stories.tsx  MessageInput.tsx  ProfileMenu.tsx  RemoveUserDialog.tsx  UserProfileDialog.tsx  cryptoWasm.tsx
frontend/src/hooks/: cryptoWasm.tsx  websockets.tsx
frontend/src/lib/: auth.ts  groups.ts  messages.ts
frontend/src/pages/: Chat.tsx  CookieCheck.tsx  (+5 more)
