[package]
name = "argon2wasm"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.10.3"
age = "0.11.1"
argon2 = "0.5.3"
base64 = "0.22.1"
bech32 = "0.11.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"

[dependencies.getrandom]
features = ["js"]
version = "*"
